Add GitHubModelService and ensure secrets removed from appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "GitHubModels": {
-    "Token": "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"
-  }
+  "AllowedHosts": "*"
 }
